Valdiation refactoring and fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,8 @@ logging.level.org.springframework=INFO
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
 
+# Just to avoid "No serializer found for class springtime.ssn.Violation"
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 # What is the spring.profiles.active property
 spring.profiles.active=mysql
