--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,8 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 # Just to avoid "No serializer found for class springtime.ssn.Violation"
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-# What is the spring.profiles.active property
-spring.profiles.active=mysql
+# SQL is written to be idempotent so this is safe
+spring.sql.init.mode=always
+
+# This is to switch from H2 to mysql
+# spring.profiles.active=mysql
