disable git-commit-id-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -256,7 +256,7 @@
       </plugin>
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
-        file is present at the classpath -->
+        file is present at the classpath
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
@@ -276,7 +276,7 @@
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
           <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
         </configuration>
-      </plugin>
+      </plugin> -->
 
     </plugins>
   </build>
